[gd_scene load_steps=7 format=3 uid="uid://b2is734k5nsrp"]

[ext_resource type="Texture2D" uid="uid://oydsfnkoi4sw" path="res://resourses/Game/Tablichka/tablichkaCloset.png" id="1_4ebfe"]
[ext_resource type="Script" uid="uid://bmuc1m6kpaady" path="res://scripts/tablichka.gd" id="1_l2enx"]
[ext_resource type="Texture2D" uid="uid://b0ibih8lx03l0" path="res://resourses/Game/Tablichka/tablichkaCloseSelect.png" id="2_l2enx"]
[ext_resource type="Texture2D" uid="uid://kw6jpniihwhb" path="res://resourses/Game/Tablichka/tablichkaOpent.png" id="3_y78wb"]
[ext_resource type="Texture2D" uid="uid://bsk3taiuykq0w" path="res://resourses/Game/Tablichka/tablichkaOpentSelect.png" id="4_7n1i8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_rjh4y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_4ebfe")
}],
"loop": true,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_l2enx")
}],
"loop": true,
"name": &"closes",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_y78wb")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_7n1i8")
}],
"loop": true,
"name": &"opens",
"speed": 5.0
}]

[node name="tablichka" type="Button"]
offset_left = -155.0
offset_top = -100.0
offset_right = 155.0
offset_bottom = 101.0
focus_mode = 0
flat = true
script = ExtResource("1_l2enx")

[node name="tablichka_a" type="AnimatedSprite2D" parent="."]
position = Vector2(155, 100)
sprite_frames = SubResource("SpriteFrames_rjh4y")
animation = &"close"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
